*minor bug fix - when loading the home page sometimes the latest news and twitter feeds would touch and there wouldnt be a gap between them

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -21,6 +21,11 @@ img.responsive-img{
     width: 100;
 }
 
+.col-6{
+    margin-left: inherit;
+    margin-right: inherit;
+}
+
 .col-13{
     flex: 25%;
     float: left;
